# advent-of-code2022

./: .gitignore  Day1.md  Readme.md  aoc2022.cabal  build.sh  default.nix  result  shell.nix
doc/: Day1.md  Day6.md
nix/: sources.json
src/: Day1.lhs  Day2.lhs  Day3.lhs  Day4.lhs  Day5.lhs  Day6.lhs  Main.lhs
