cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MPL-2.0
license-file:       LICENSE
author:             samtoth
maintainer:         sam@toth.co.uk

executable aoc2022
    build-depends:    base
                    , optparse-generic
                    , megaparsec
                    , text
                    , split
    hs-source-dirs:   ./src/
    main-is:          Main.lhs
    other-modules:    Day1, Day2, Day3
    ghc-options:      -pgmL markdown-unlit
    default-extensions: TypeApplications
                      , DerivingStrategies
                      , TypeOperators
                      , DataKinds
                      , DeriveGeneric
                      , DeriveAnyClass
                      , GeneralisedNewtypeDeriving
                      , OverloadedStrings
                      , FlexibleInstances
                      , StandaloneDeriving
                      

    default-language: Haskell2010

